major bugs squished

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 1em;
-    margin: 1em;
+    margin: .5em 1em;
     background-color: white;
     border-radius: 1em;
 }
@@ -21,6 +21,11 @@ body {
     width: 100%;
     min-width: 15em;
     margin: 0 1em;
+}
+
+.options-wrapper select {
+    width: 100%;
+    margin-left: 1em;
 }
 
 .bracket-title{
@@ -66,6 +71,7 @@ body {
     border-radius: .25em;
     padding-left: .5em;
     white-space: nowrap;
+    min-width: 8em;
 }
 
 .team-wrapper > .team {
